# untyped-lambda-calculus

./: README.md  utarith.cabal
src/: Main.hs
