name:                utarith
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dewline/utarith#readme
license:             BSD3
license-file:        LICENSE
author:              dewline
maintainer:          example@example.com
copyright:           dewline
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable utarith
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
